--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
     border: none;
     border-radius: 12px;
     transition: background-color 0.3s ease;
-    font-family: Brush Script MT, Brush Script Std, cursive;
+    font-family: 'Gill Sans, sans-serif';
 
 }
 
